# FlappyBirdQt

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
assets/: resources.qrc
src/: pillaritem.cpp  pillaritem.h  scene.cpp  scene.h  widget.cpp  widget.h  widget.ui
